--- a/index.html
+++ b/index.html
@@ -829,15 +829,15 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://script.google.com/macros/s/AKfycbwKQoA9hZqvDKszFNcBnz7K0abQGOddNfFiARUmRIGvWuYGUu7A4zPZjllYJyUMTI5pFg/exec" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                  <input type="text" name="Name" class="form-control" placeholder="Your Name" required="">
                 </div>
 
                 <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                  <input type="email" class="form-control" name="Email" placeholder="Your Email" required="">
                 </div>
 
                 <div class="col-md-12">
