--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="https://script.google.com/macros/s/AKfycbwKQoA9hZqvDKszFNcBnz7K0abQGOddNfFiARUmRIGvWuYGUu7A4zPZjllYJyUMTI5pFg/exec" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+           <form action="https://script.google.com/macros/s/AKfycbwHqVFpxlcX8glvKTgyfzOXLoYfZisin4tOH1y9S0AHRu9uZ7EoqziUmdAndFS2yr77kg/exec" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -841,11 +841,11 @@
                 </div>
 
                 <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                  <input type="text" class="form-control" name="Subject" placeholder="Subject" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                  <textarea class="form-control" name="Message" rows="6" placeholder="Message" required=""></textarea>
                 </div>
 
                 <div class="col-md-12 text-center">
