--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 <div class="portfolio-info">
                   <h4>Stock exchange</h4>
                   <p>Design and development of a stock exchange site.</p>
-                  <a href="assets/img/portfolio/web-1.jpg" title="Web 1" data-gallery="portfolio-gallery-product"
+                  <a href="assets/img/portfolio/web-1.jpg" title="Stock exchange" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -363,7 +363,7 @@
                 <div class="portfolio-info">
                   <h4>Car navigation system</h4>
                   <p>Design of a car navigation system.</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="Car navigation system" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -375,7 +375,7 @@
                 <div class="portfolio-info">
                   <h4>Payment cards</h4>
                   <p>3d design of payment cards.</p>
-                  <a href="assets/img/portfolio/3d-1.jpg" title="3d 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/3d-1.jpg" title="Payment cards" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -387,7 +387,7 @@
                 <div class="portfolio-info">
                   <h4>Coffe house</h4>
                   <p>Design and development of a coffee house site.</p>
-                  <a href="assets/img/portfolio/web-2.jpg" title="Web 2" data-gallery="portfolio-gallery-product"
+                  <a href="assets/img/portfolio/web-2.jpg" title="Coffe house" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -400,7 +400,7 @@
                 <div class="portfolio-info">
                   <h4>Cryptocurrency</h4>
                   <p>Design of a cryptocurrency mobile application.</p>
-                  <a href="assets/img/portfolio/app-2.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/app-2.jpg" title="Cryptocurrency" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -412,7 +412,7 @@
                 <div class="portfolio-info">
                   <h4>Energy storage</h4>
                   <p>3d motion design of an energy storage.</p>
-                  <a href="assets/img/portfolio/3d-2.jpg" title="3d 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/3d-2.jpg" title="Energy storage" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -424,7 +424,7 @@
                 <div class="portfolio-info">
                   <h4>Stock market charts</h4>
                   <p>Design and development of a stock market charts site.</p>
-                  <a href="assets/img/portfolio/web-3.jpg" title="Web 3" data-gallery="portfolio-gallery-product"
+                  <a href="assets/img/portfolio/web-3.jpg" title="Stock market charts" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -437,7 +437,7 @@
                 <div class="portfolio-info">
                   <h4>Ticket sales</h4>
                   <p>Design of a mobile ticket sales application.</p>
-                  <a href="assets/img/portfolio/app-3.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/app-3.jpg" title="Ticket sales" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -449,7 +449,7 @@
                 <div class="portfolio-info">
                   <h4>Looping ties</h4>
                   <p>3d model of looping ties.</p>
-                  <a href="assets/img/portfolio/3d-3.jpg" title="3d 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/3d-3.jpg" title="Looping ties" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -461,7 +461,7 @@
                 <div class="portfolio-info">
                   <h4>Internet banking</h4>
                   <p>Design and development of an internet banking application.</p>
-                  <a href="assets/img/portfolio/web-4.jpg" title="Web 4" data-gallery="portfolio-gallery-product"
+                  <a href="assets/img/portfolio/web-4.jpg" title="Internet banking" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -474,7 +474,7 @@
                 <div class="portfolio-info">
                   <h4>Fitness</h4>
                   <p>Design and development of a fitness application.</p>
-                  <a href="assets/img/portfolio/app-4.jpg" title="App 4" data-gallery="portfolio-gallery-app"
+                  <a href="assets/img/portfolio/app-4.jpg" title="Fitness" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -487,7 +487,7 @@
                 <div class="portfolio-info">
                   <h4>Audio player</h4>
                   <p>Design and development of an internet audio player.</p>
-                  <a href="assets/img/portfolio/web-5.jpg" title="Web 5" data-gallery="portfolio-gallery-product"
+                  <a href="assets/img/portfolio/web-5.jpg" title="Audio player" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -500,7 +500,7 @@
                 <div class="portfolio-info">
                   <h4>Freelance</h4>
                   <p>Design and development of a freelance site.</p>
-                  <a href="assets/img/portfolio/web-6.jpg" title="Web 6" data-gallery="portfolio-gallery-product"
+                  <a href="assets/img/portfolio/web-6.jpg" title="Freelance" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -513,7 +513,7 @@
                 <div class="portfolio-info">
                   <h4>Aggregator</h4>
                   <p>Design and development of an aggregator site.</p>
-                  <a href="assets/img/portfolio/web-7.jpg" title="Web 7" data-gallery="portfolio-gallery-product"
+                  <a href="assets/img/portfolio/web-7.jpg" title="Aggregator" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -526,7 +526,7 @@
                 <div class="portfolio-info">
                   <h4>Job</h4>
                   <p>Design and development of a job site.</p>
-                  <a href="assets/img/portfolio/web-8.jpg" title="Web 8" data-gallery="portfolio-gallery-product"
+                  <a href="assets/img/portfolio/web-8.jpg" title="Job" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
