--- a/index.html
+++ b/index.html
@@ -46,14 +46,6 @@
         <!-- Uncomment the line below if you also wish to use text logo -->
          <h1 class="sitename">Prime</h1>  
       </a>
-      
-<!--      <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-md-start" data-aos="fade-up">
-            <h2>CREATING WEBSITES THAT MAKE YOU STOP &amp; STARE</h2>
-            <p>We are team of talented designers making websites with Bootstrap</p>
-            <div class="d-flex mt-4 justify-content-center justify-content-md-start">
-              <a href="#about" class="cta-btn">Get Started</a>
-            </div>
-          </div>-->
 
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -352,7 +344,7 @@
                   <p>Design and development of a stock exchange site.</p>
                   <a href="assets/img/portfolio/web-1.jpg" title="Stock exchange" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-stock-exchange.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -364,7 +356,7 @@
                   <h4>Car navigation system</h4>
                   <p>Design of a car navigation system.</p>
                   <a href="assets/img/portfolio/app-1.jpg" title="Car navigation system" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-car-navigation-system.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -376,7 +368,7 @@
                   <h4>Payment cards</h4>
                   <p>3d design of payment cards.</p>
                   <a href="assets/img/portfolio/3d-1.jpg" title="Payment cards" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-payment-cards.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -389,7 +381,7 @@
                   <p>Design and development of a coffee house site.</p>
                   <a href="assets/img/portfolio/web-2.jpg" title="Coffe house" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-coffe-house.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -423,10 +415,10 @@
                 <img src="assets/img/portfolio/web-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Stock market charts</h4>
-                  <p>Design and development of a stock market charts site.</p>
+                  <p>Design and development of a stock market charts.</p>
                   <a href="assets/img/portfolio/web-3.jpg" title="Stock market charts" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-stock-exchange.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
