--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                   <h4>Cryptocurrency</h4>
                   <p>Design of a cryptocurrency mobile application.</p>
                   <a href="assets/img/portfolio/app-2.jpg" title="Cryptocurrency" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-cryptocurrency.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -405,7 +405,7 @@
                   <h4>Energy storage</h4>
                   <p>3d motion design of an energy storage.</p>
                   <a href="assets/img/portfolio/3d-2.jpg" title="Energy storage" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-energy-storage.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
