--- a/portfolio-energy-storage.html
+++ b/portfolio-energy-storage.html
@@ -126,7 +126,7 @@
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Energy storage</h2>
               <p>
-                3D design and modeling of an energy storage for a presentation of a electricity charging devices.
+                3D design and modeling of an energy storage for a presentation of electricity charging devices.
               </p>
             </div>
           </div>
