--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 <img src="assets/img/portfolio/web-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Stock exchange</h4>
-                  <p>Design and development of a stock exchange site.</p>
+                  <p>Design and development of a stock exchange website.</p>
                   <a href="assets/img/portfolio/web-1.jpg" title="Stock exchange" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-stock-exchange.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -377,11 +377,11 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/web-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Coffe house</h4>
-                  <p>Design and development of a coffee house site.</p>
-                  <a href="assets/img/portfolio/web-2.jpg" title="Coffe house" data-gallery="portfolio-gallery-web"
+                  <h4>Coffee house</h4>
+                  <p>Design and development of a coffee house website.</p>
+                  <a href="assets/img/portfolio/web-2.jpg" title="Coffee house" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-coffe-house.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-coffee-house.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -430,7 +430,7 @@
                   <h4>Ticket sales</h4>
                   <p>Design of a mobile ticket sales application.</p>
                   <a href="assets/img/portfolio/app-3.jpg" title="Ticket sales" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-ticket-sales.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -442,7 +442,7 @@
                   <h4>Looping ties</h4>
                   <p>3d model of looping ties.</p>
                   <a href="assets/img/portfolio/3d-3.jpg" title="Looping ties" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-looping-ties.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -452,10 +452,10 @@
                 <img src="assets/img/portfolio/web-4.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Internet banking</h4>
-                  <p>Design and development of an internet banking application.</p>
+                  <p>Design and development of an internet banking web application.</p>
                   <a href="assets/img/portfolio/web-4.jpg" title="Internet banking" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-internet-banking.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -465,10 +465,10 @@
                 <img src="assets/img/portfolio/app-4.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Fitness</h4>
-                  <p>Design and development of a fitness application.</p>
+                  <p>Design and development of a fitness mobile application.</p>
                   <a href="assets/img/portfolio/app-4.jpg" title="Fitness" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-fitness.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -481,7 +481,7 @@
                   <p>Design and development of an internet audio player.</p>
                   <a href="assets/img/portfolio/web-5.jpg" title="Audio player" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-audio-player.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -491,10 +491,10 @@
                 <img src="assets/img/portfolio/web-6.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Freelance</h4>
-                  <p>Design and development of a freelance site.</p>
+                  <p>Design and development of a freelance website.</p>
                   <a href="assets/img/portfolio/web-6.jpg" title="Freelance" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-freelance.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -504,10 +504,10 @@
                 <img src="assets/img/portfolio/web-7.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Aggregator</h4>
-                  <p>Design and development of an aggregator site.</p>
+                  <p>Design and development of an aggregator website.</p>
                   <a href="assets/img/portfolio/web-7.jpg" title="Aggregator" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-aggregator.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -517,10 +517,10 @@
                 <img src="assets/img/portfolio/web-8.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Job</h4>
-                  <p>Design and development of a job site.</p>
+                  <p>Design and development of a job search website.</p>
                   <a href="assets/img/portfolio/web-8.jpg" title="Job" data-gallery="portfolio-gallery-web"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-job.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
