--- a/portfolio-audio-player.html
+++ b/portfolio-audio-player.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Coffe house - Prime</title>
-  <meta name="description" content="Coffe house - portfolio details.">
+  <title>Audio player - Prime</title>
+  <meta name="description" content="Audio player - portfolio details.">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
@@ -67,7 +67,7 @@
     <!-- Page Title -->
     <div class="page-title">
       <div class="container">
-        <h1>Coffe house</h1>
+        <h1>Audio player</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="/">Home</a></li>
@@ -106,7 +106,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/web-2.jpg" alt="">
+                  <img src="assets/img/portfolio/web-5.jpg" alt="">
                 </div>
 
               </div>
@@ -119,14 +119,14 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web</li>
-                <li><strong>Client</strong>: Life Groups Company</li>
-                <li><strong>Project date</strong>: 15 May, 2022</li>
+                <li><strong>Client</strong>: Citrus Company</li>
+                <li><strong>Project date</strong>: 18 March, 2023</li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Coffe house</h2>
+              <h2>Audio player</h2>
               <p>
-                Design and development of a coffe house site. Integration of a discount system. Distribution of orders between different cofee houses of the company.
+                Design and development of an internet audio player.
               </p>
             </div>
           </div>
