--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Custom web design, applications and services.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
