--- a/index.html
+++ b/index.html
@@ -253,8 +253,7 @@
               <a href="service-web-development.html" class="stretched-link">
                 <h3>Web Development</h3>
               </a>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt
-                dolorem.</p>
+              <p>Making of comprehensive and reliable web applications is our best strategy in web development.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -266,8 +265,7 @@
               <a href="service-product-management.html" class="stretched-link">
                 <h3>Product Management</h3>
               </a>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus
-                enim.</p>
+              <p>Strategically driving of development, launching, support and improvement of products bring a successful result.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -279,8 +277,7 @@
               <a href="service-graphic-design.html" class="stretched-link">
                 <h3>Graphic Design</h3>
               </a>
-              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci
-                neque.</p>
+              <p>High-quality graphics are an essential part of modern applications.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -292,8 +289,7 @@
               <a href="service-branding.html" class="stretched-link">
                 <h3>Branding</h3>
               </a>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum
-                corrupti.</p>
+              <p>Company recognition is a key part of a successful business.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -305,7 +301,7 @@
               <a href="service-marketing.html" class="stretched-link">
                 <h3>Marketing</h3>
               </a>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+              <p>Consistent online growth of a business is a base part of delivering products to the highest range of customers.</p>
             </div>
           </div><!-- End Service Item -->
 
