--- a/portfolio-ticket-sales.html
+++ b/portfolio-ticket-sales.html
@@ -163,18 +163,19 @@
             <li><a href="/#about">About</a></li>
             <li><a href="/#services">Services</a></li>
             <li><a href="terms-of-service.html">Terms of service</a></li>
-            <li><a href="privacy-policy.html">Terms of service</a></li>
+            <li><a href="privacy-policy.html">Privacy policy</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="web-design.html">Web Design</a></li>
-            <li><a href="web-development.html">Web Development</a></li>
-            <li><a href="product-management.html">Product Management</a></li>
-            <li><a href="marketing.html">Marketing</a></li>
-            <li><a href="graphic-design.html">Graphic Design</a></li>
+            <li><a href="service-web-design.html">Web Design</a></li>
+            <li><a href="service-web-development.html">Web Development</a></li>
+            <li><a href="service-product-management.html">Product Management</a></li>
+            <li><a href="service-graphic-design.html">Graphic Design</a></li>
+            <li><a href="service-branding.html">Branding</a></li>
+            <li><a href="service-marketing.html">Marketing</a></li>
           </ul>
         </div>
 
