--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
             </p>
             <ul>
               <li>
-                <i class="bi bi-diagram-3"></i>
+                <i class="bi bi-at"></i>
                 <div>
                   <h5>Ullamco laboris nisi ut aliquip consequat</h5>
                   <p>Magni facilis facilis repellendus cum excepturi quaerat praesentium libre trade</p>
                 </div>
               </li>
               <li>
-                <i class="bi bi-fullscreen-exit"></i>
+                <i class="bi bi-briefcase"></i>
                 <div>
                   <h5>Magnam soluta odio exercitationem reprehenderi</h5>
                   <p>Quo totam dolorum at pariatur aut distinctio dolorum laudantium illo direna pasata redi</p>
                 </div>
               </li>
               <li>
-                <i class="bi bi-broadcast"></i>
+                <i class="bi bi-globe2"></i>
                 <div>
                   <h5>Voluptatem et qui exercitationem</h5>
                   <p>Et velit et eos maiores est tempora et quos dolorem autem tempora incidunt maxime veniam</p>
