--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-globe" style="color: #6610f2;"></i>
+                <i class="bi bi-filter-square" style="color: #6610f2;"></i>
               </div>
               <a href="service-web-design.html" class="stretched-link">
                 <h3>Web Design</h3>
@@ -248,7 +248,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-calendar4-week" style="color: #fd7e14;"></i>
+                <i class="bi bi-code-square" style="color: #fd7e14;"></i>
               </div>
               <a href="service-web-development.html" class="stretched-link">
                 <h3>Web Development</h3>
@@ -272,7 +272,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-credit-card-2-front" style="color: #df1529;"></i>
+                <i class="bi bi-gem" style="color: #df1529;"></i>
               </div>
               <a href="service-graphic-design.html" class="stretched-link">
                 <h3>Graphic Design</h3>
